--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formidable": "^3.5.2",
     "mustache-express": "^1.3.2",
     "pg": "^8.14.1",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "uuid": "^11.1.0"
   },
