Fix static file serving for Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
     {
       "src": "app.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "css/**",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "uploads/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
